# bot-template

./: Dockerfile  README.md  docker-compose.test.yaml  docker-compose.yaml  example.env  pyproject.toml
app/: __main__.py  bot.py  settings.py
app/db/: middlewares.py  models.py  utils.py
app/handlers/: main.py
